# popskl-core

./: README.md
contract/: Cargo.toml  Makefile  README.md
contract/scripts/: README.md  package-lock.json  package.json  tsconfig.json
contract/scripts/src/: near-helper.ts  popskl-helper.ts
contract/src/: lib.rs  private_proofs.rs
contract/tests/: e2e.rs
contracts/: .gitignore  .idea.md  README.md  asconfig.json  package-lock.json  package.json
contracts/scripts/: 1.deploy.sh  1.init.sh  2.read.sh  3.pop.sh  README.md  x-clear-visitors.sh  x-set-cooldown.sh  x-toggle-active.sh
contracts/src/popskl/assembly/: index.ts
scripts/: package-lock.json  x-report.sh
src/: private_proofs.rs  utils.ts
src/popskl/__tests__/: index.unit.spec.ts
