[package]
name = "popskl"
version = "0.1.0"
authors = ["PoPskl <info@popskl.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0-pre.9"
near-units = "0.2.0"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.18.1", features = ["full"] }
sha3 = "0.10.1"
workspaces = "0.3.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
